# APS_DoP

./: Graphs  README.md  pyproject.toml
aps_dop/: APS_DoP.py
docs/: APS_DoP.py  graphs.py  start.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_80d764418e4a1d7a_APS_DoP_py.html  z_80d764418e4a1d7a___init___py.html
test_data/: test_for_python_DNA_aligned.fasta  test_for_python_protein_aligned.fasta
tests/: conftest.py  test_APS_DoP.py
