[tool.poetry]
name = "aps-dop"
version = "0.1.0"
description = ""
authors = ["Nichcka <vinichenko.nika@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
beautifulsoup4 = "^4.13.3"
seaborn = "^0.13.2"
pandas = "2.0.3"
matplotlib = "3.7.5"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
